--- a/locales/en-US.properties
+++ b/locales/en-US.properties
@@ -12,3 +12,17 @@ info-load-priv = Here you can import your private key from a text file in your S
 info-encrypt = Here you can encrypt a message using a public key present on the app database.</p><br><p>First of all you have to enter the email of the receiver and the message you want to send.<br>Then, by clicking on 'Encrypt Message' you'll show in the textbox at the bottom the encrypted version of the message you wrote, ready to be sent.</p><br><p>You can now copy the encrypted message or tap on the Email button on the header bar: it will open the system Email client ready to send an email to the receiver you entered, with the encrypted message.
 info-decrypt = Here you can decrypt a message you've received.</p><br><p>In order to do this you have to enter your email, paste the encrypted message, type your passphrase and click on 'Decrypt Message'.</p><br><p>That's all! <br>You will be able to see the decrypted version of the message you've received!
 info-database = Here you can manage the keys you've stored locally.</p><br><p>By clicking on one key you will be able to change the name, export keys to files or remove it from the database.
+head-online-res = Online Results
+head-local-res = Local Results
+tap-save-pub = Tap here to save his public key
+clear-db = Clear database
+db-empty = Database empty
+res-priv = Results
+add-priv = Add your private key
+add-pub = Add public key
+gen-pair = Generate Pair
+search = Search
+sel-file = Select this file
+btn-encr = Encrypt Message
+btn-decr = Decrypt Message
+rem-key = Remove key
