--- a/locales/it-IT.properties
+++ b/locales/it-IT.properties
@@ -12,3 +12,17 @@ info-load-priv = Qua puoi importare la tua chiave privata da un file presente ne
 info-encrypt = Qua puoi cifrare un messaggio usando una delle chiavi pubbliche presenti nel database dell'app.</p><br><p>Per prima cosa devi inserire l'email del destinatario e il messaggio che vuoi cifrare.<br>Poi, facendo click su 'Cifra il messaggio' comparirà la versione cifrata del messaggio che hai scritto nella textbox in fondo alla schermata, pronto per essere inviato.</p><br><p>Potrai copiare il messaggio cifrato oppure toccare l'icona delle Email sulla barra in alto: verrà richiamata l'app Email (o il client che usi), pronta per inviare un'email all'indirizzo del destinatario con il messaggio appena cifrato.
 info-decrypt = Qua puoi decifrare i messaggi cifrati che hai ricevuto.</p><br><p>Per farlo basta inserire la tua email, incollare il messaggio cifrato, inserire la passphrase scelta alla creazione della coppia di chiavi e fare click sul bottone 'Decifra il messaggio'.</p><br><p>Ed è tutto! <br>Potrai vedere la versione decifrata del messaggio che hai ricevuto!
 info-database = Qua puoi gestire le chiavi salvate nel database locale.</p><br><p>Facendo click su una chiave potrai cambiare il nome con cui è salvata, esportarla su file o rimuoverla dal database locale.
+head-online-res = Risultati online
+head-local-res = Risultati locali
+tap-save-pub = Tocca per salvare la sua chiave privata
+clear-db = Svuota il database
+db-empty = Database vuoto
+res-priv = Risultati
+add-priv = Aggiungi chiave privata
+add-pub = Aggiungi chiave pubblica
+gen-pair = Genera coppia di chiavi
+search = Cerca
+sel-file = Seleziona questo file
+btn-encr = Cifra il messaggio
+btn-decr = Decifra il messaggio
+rem-key = Rimuovi chiave
